--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+THIS PROJECT IS NO LONGER MAINTAINED |
+-------------------------------------+
+
 = Description
     The DBI package is a vendor independent interface for accessing databases.
     It is similar, but not identical to, Perl's DBI module.
